--- a/index.html
+++ b/index.html
@@ -1,95 +1,183 @@
 <!DOCTYPE html>
 
-
 <head>
   <title>Cliff McCall - Full Stack Developer</title>
-  <link rel="shortcut icon" href="img/cm.ico">
+  <link rel="shortcut icon" href="img/cm.ico" />
   <!-- Link to stylesheet -->
-  <link href="stlye.css" rel="stylesheet">
-  <meta charset="utf-8">
+  <link href="stlye.css" rel="stylesheet" />
+  <meta charset="utf-8" />
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Oswald:700|Roboto:400,900" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Oswald:700|Roboto:400,900"
+    rel="stylesheet"
+  />
 </head>
 
 <body>
-  <div class="welcome">
+  <section class="welcome" data-type="background" data-speed="5">
     <div class="line"></div>
-    <img class="welcome-img" src="img/image_from_ios.png" alt="A picture of Cliff McCall">
+    <img
+      class="welcome-img"
+      src="img/image_from_ios.png"
+      alt="A picture of Cliff McCall"
+    />
     <div class="line"></div>
-  </div>
+  </section>
+  <!-- End Welcome -->
 
   <section class="intro">
-    <div class="intro-title">
-      <h2>Take the Risk</h2>
-    </div>
+    <div class="intro-title"><h2>Take the Risk</h2></div>
+    <!-- End Intro Title -->
     <div class="intro-body">
-      <p>In August 2017, my wife (Amanda) and I embarked on a journey without knowing where it would end. We quit our
-        cushy jobs in Atlanta and landed in Central Texas. In a few short months, we found it was worth the risk. We
-        started projects we wouldn't even have thought of back in Georgia. I was able to enroll in an online full-stack
-        development course, and we are finding our adventure is really just beginning.
+      <p>
+        In August 2017, my wife (Amanda) and I embarked on a journey without
+        knowing where it would end. We quit our cushy jobs in Atlanta and landed
+        in Central Texas. In a few short months, we found it was worth the risk.
+        We started projects we wouldn't even have thought of back in Georgia. I
+        was able to enroll in an online full-stack development course, and we
+        are finding our adventure is really just beginning.
       </p>
     </div>
+    <!-- End Intro Body -->
   </section>
+  <!-- End Intro -->
 
   <section class="about-me">
-    <img class="about-img" src="img/about.jpg" alt="A picture of Cliff McCall">
-    <h1 class="about-title">Cliff McCall</h1>
-    <h2 class="about-subtitle">Full-Stack Javascript Developer</h2>
-    <div class="about-text">
-      <p>Experience Includes: HTML, CSS, SASS, Javascript, Angular, Angular Material, React & Redux, MaterializeCSS,
-        Node.JS, SQLite & MySQL, MongoDB, and Agile Project Management.
-      </p>
+    <img
+      class="about-img"
+      src="img/about.jpg"
+      alt="A picture of Cliff McCall"
+    />
+    <div class="about-title">
+      <h1>Cliff McCall<span>Full Stack JavaScript Developer</span></h1>
     </div>
+    <!-- end About Title -->
   </section>
+  <!-- end about-me -->
+
+  <section class="about-text" data-type="background" data-speed="2">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2"><h1>Technical Skills</h1></div>
+        <!-- end col -->
+      </div>
+      <!-- end row -->
+    </div>
+    <!-- end container -->
+    <div class="container images">
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <img src="img/html.png" alt="HTML" />
+          <img src="img/css.png" alt="CSS" />
+          <img src="img/js.png" alt="JavaScript" />
+        </div>
+        <!-- end col -->
+      </div>
+      <!-- end row -->
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <img src="img/react.png" alt="React" />
+          <img src="img/angular.png" alt="Angular" />
+          <img src="img/node.png" alt="Node.js" />
+        </div>
+        <!-- end col -->
+      </div>
+      <!-- end row -->
+    </div>
+    <!-- end container -->
+  </section>
+  <!-- End about-text -->
 
   <section class="certifications">
     <div class="certifications-title">Certifications</div>
     <div class="row bst">
       <div class="col">
         <h1>Bethel School of Technology</h1>
-        <p>I took part in the 24 week immersive Full Stack Development program for JavaScript from April 2018 to
-          October 2018. For the final six weeks
-          of the program, I was teamed up with a group of five other students from across the
-          world.</p>
-        <p>The name of our web application is <strong>SweatLog</strong>. It was developed with the fitness
-          enthusiast in mind. The features of <strong>SweatLog</strong> include logging your workouts, a "Benchmarks"
-          section to record personal records or goals, a map to find a gym near you, a timer, and a technique guide for
-          movements.</p>
         <p>
-          The technologies used were HTML, CSS, JavaScript, Angular, Angular Material, Nodejs, and Express. GitHub was
-          used for
-          source control and for our project board to keep up with weekly sprints. We used MongoDB and mLab for our
-          database. The app was deployed on
-          Heroku. <strong>SweatLog</strong> was built for use on a desktop or mobile device.</p>
-        <p>If you would like to know more about our app or Bethel School of Technology, follow the links below.</p>
+          I took part in the 24 week immersive Full Stack Development program
+          for JavaScript from April 2018 to October 2018. For the final six
+          weeks of the program, I was teamed up with a group of five other
+          students from across the world.
+        </p>
+        <p>
+          The name of our web application is <strong>SweatLog</strong>. It was
+          developed with the fitness enthusiast in mind. The features of
+          <strong>SweatLog</strong> include logging your workouts, a
+          "Benchmarks" section to record personal records or goals, a map to
+          find a gym near you, a timer, and a technique guide for movements.
+        </p>
+        <p>
+          The technologies used were HTML, CSS, JavaScript, Angular, Angular
+          Material, Nodejs, and Express. GitHub was used for source control and
+          for our project board to keep up with weekly sprints. We used MongoDB
+          and mLab for our database. The app was deployed on Heroku.
+          <strong>SweatLog</strong> was built for use on a desktop or mobile
+          device.
+        </p>
+        <p>
+          If you would like to know more about our app or Bethel School of
+          Technology, follow the links below.
+        </p>
       </div>
+      <!-- end col -->
       <div class="row links">
         <div class="col">
-          <a href="https://github.com/9-10-a/final-project" target="blank" class="bstA"><strong>SweatLog Code</strong></a>
+          <a
+            href="https://github.com/9-10-a/final-project"
+            target="blank"
+            class="bstA"
+            ><strong>SweatLog Code</strong></a
+          >
         </div>
+        <!-- end col -->
         <div class="col">
-          <a href="https://sweatlog.herokuapp.com/" target="blank" class="bstA"><strong>SweatLog Deployed</strong></a>
+          <a href="https://sweatlog.herokuapp.com/" target="blank" class="bstA"
+            ><strong>SweatLog Deployed</strong></a
+          >
         </div>
+        <!-- end col -->
         <div class="col">
-          <a href="https://betheltech.net/" target="blank" class="bstA"><strong>Bethel School of Technology</strong></a>
+          <a href="https://betheltech.net/" target="blank" class="bstA"
+            ><strong>Bethel School of Technology</strong></a
+          >
         </div>
+        <!-- end col -->
       </div>
+      <!-- end row links -->
     </div>
+    <!-- end row bst -->
     <div class="row">
       <div class="col">
-        <h1><a href="https://www.udemy.com/" target="blank">Udemy Courses</a></h1>
-        <a class="button" data-modal="#modalOne">Master GitHub</a><br>
-        <a class="button" data-modal="#modalTwo">Angular & NodeJS - The MEAN Stack Guide</a><br>
-        <a class="button" data-modal="#modalFive">React 16 (incl. React Router 4 & Redux)</a><br>
+        <h1>
+          <a href="https://www.udemy.com/" target="blank">Udemy Courses</a>
+        </h1>
+        <a class="button" data-modal="#modalOne">Master GitHub</a><br />
+        <a class="button" data-modal="#modalTwo"
+          >Angular & NodeJS - The MEAN Stack Guide</a
+        ><br />
+        <a class="button" data-modal="#modalFive"
+          >React 16 (incl. React Router 4 & Redux)</a
+        ><br />
       </div>
+      <!-- end col -->
       <div class="col">
-        <h1><a href="https://www.freecodecamp.org/" target="blank">
-            FreeCodeCamp</a></h1>
-        <a class="button" data-modal="#modalFour">Responsive Web Design</a><br>
-        <a class="button" data-modal="#modalThree">JavaScript Algorithms and Data Structures</a><br>
+        <h1>
+          <a href="https://www.freecodecamp.org/" target="blank">
+            FreeCodeCamp</a
+          >
+        </h1>
+        <a class="button" data-modal="#modalFour">Responsive Web Design</a
+        ><br />
+        <a class="button" data-modal="#modalThree"
+          >JavaScript Algorithms and Data Structures</a
+        ><br />
       </div>
+      <!-- end col -->
     </div>
+    <!-- end row -->
   </section>
+  <!-- end certifications -->
+
   <!-- MODAL -->
   <!-- Udemy - Master GitHub -->
   <div id="modalOne" class="modal">
@@ -99,17 +187,32 @@
       <div class="modal-links">
         <ul>
           <li>
-            <a href="https://www.udemy.com/certificate/UC-T5Y4PLFA/" target="blank">Verify Certificate</a>
+            <a
+              href="https://www.udemy.com/certificate/UC-T5Y4PLFA/"
+              target="blank"
+              >Verify Certificate</a
+            >
           </li>
           <li>
-            <a href="https://www.udemy.com/share/100imEBEAecFhXQno=/" target="blank">Link to Course</a>
+            <a
+              href="https://www.udemy.com/share/100imEBEAecFhXQno=/"
+              target="blank"
+              >Link to Course</a
+            >
           </li>
         </ul>
       </div>
-      <img class="modal-img" src="https://lh3.googleusercontent.com/RFu83alRYpcLu26gKWJ1Q1LxmOJcYnXN_J2hwOboxHCJML9kHva6DigmMnYOkP6dmRrN9aHEs5_rQL1YS10rMvq09J1TB-ldtOqVCGdQLImXfT6AtsBHLsP-acG5mIRx85CV7PddVg=w2400"
-        alt="">
+      <!-- end modal links -->
+      <img
+        class="modal-img"
+        src="https://lh3.googleusercontent.com/RFu83alRYpcLu26gKWJ1Q1LxmOJcYnXN_J2hwOboxHCJML9kHva6DigmMnYOkP6dmRrN9aHEs5_rQL1YS10rMvq09J1TB-ldtOqVCGdQLImXfT6AtsBHLsP-acG5mIRx85CV7PddVg=w2400"
+        alt=""
+      />
     </div>
+    <!-- end modal content -->
   </div>
+  <!-- end modal one -->
+
   <!-- Udemy - Angular & NodeJS - The MEAN Stack -->
   <div id="modalTwo" class="modal">
     <div class="modal-content">
@@ -118,20 +221,39 @@
       <div class="modal-links">
         <ul>
           <li>
-            <a href="https://github.com/cliffmccall1/MEAN-stack-course" target="blank">Project GitHub Repository</a>
+            <a
+              href="https://github.com/cliffmccall1/MEAN-stack-course"
+              target="blank"
+              >Project GitHub Repository</a
+            >
           </li>
           <li>
-            <a href="https://www.udemy.com/certificate/UC-8W3HLVW4/" target="blank">Verify Certificate</a>
+            <a
+              href="https://www.udemy.com/certificate/UC-8W3HLVW4/"
+              target="blank"
+              >Verify Certificate</a
+            >
           </li>
           <li>
-            <a href="https://www.udemy.com/share/1000nIBEAecFhXQno=/" target="blank">Link to Course</a>
+            <a
+              href="https://www.udemy.com/share/1000nIBEAecFhXQno=/"
+              target="blank"
+              >Link to Course</a
+            >
           </li>
         </ul>
       </div>
-      <img class="modal-img" src="https://lh3.googleusercontent.com/YFo87FGB0k3IOLkkEdEbngGPbWr1i70Io-C7CtQydYgyhdVZlxu_Zi-ca7l5D5OacDUp_pEjGt8sYIly8f4pzKVaIzYMitQ4EuegKVNTBJD3gCiHuBxFZDqg8UIu6UhlDXvEev0nxw=w2400"
-        alt="">
+      <!-- end modal links -->
+      <img
+        class="modal-img"
+        src="https://lh3.googleusercontent.com/YFo87FGB0k3IOLkkEdEbngGPbWr1i70Io-C7CtQydYgyhdVZlxu_Zi-ca7l5D5OacDUp_pEjGt8sYIly8f4pzKVaIzYMitQ4EuegKVNTBJD3gCiHuBxFZDqg8UIu6UhlDXvEev0nxw=w2400"
+        alt=""
+      />
     </div>
+    <!-- end modal content -->
   </div>
+  <!-- end modal two -->
+
   <!-- FCC - JavaScript Algorithms and Data Structures -->
   <div id="modalThree" class="modal">
     <div class="modal-content">
@@ -140,21 +262,37 @@
       <div class="modal-links">
         <ul>
           <li>
-            <a href="https://github.com/cliffmccall1/build-a-burger-app" target="blank">Project GitHub Repository</a>
+            <a
+              href="https://github.com/cliffmccall1/build-a-burger-app"
+              target="blank"
+              >Project GitHub Repository</a
+            >
           </li>
           <li>
-            <a href="https://www.freecodecamp.org/certification/cliffmccall1/javascript-algorithms-and-data-structures"
-              target="blank">Verify Certificate</a>
+            <a
+              href="https://www.freecodecamp.org/certification/cliffmccall1/javascript-algorithms-and-data-structures"
+              target="blank"
+              >Verify Certificate</a
+            >
           </li>
           <li>
-            <a href="https://www.freecodecamp.org/" target="blank">Link to Course</a>
+            <a href="https://www.freecodecamp.org/" target="blank"
+              >Link to Course</a
+            >
           </li>
         </ul>
       </div>
-      <img class="modal-img" src="https://lh3.googleusercontent.com/pkvqHSMxF683uHskH8IZI878VIAneSf7OltF6BKEEkfGs1rDIqut7XF15zWTS-dE8ZqqR504CREFS_FJOF-i_R3SLrTJN2_QSC62kWNBw3Jk2Yr89lIZ82pTupQWBIRqNyX9v5R1ng=w2400"
-        alt="">
+      <!-- end modal links -->
+      <img
+        class="modal-img"
+        src="https://lh3.googleusercontent.com/pkvqHSMxF683uHskH8IZI878VIAneSf7OltF6BKEEkfGs1rDIqut7XF15zWTS-dE8ZqqR504CREFS_FJOF-i_R3SLrTJN2_QSC62kWNBw3Jk2Yr89lIZ82pTupQWBIRqNyX9v5R1ng=w2400"
+        alt=""
+      />
     </div>
+    <!-- end modal content -->
   </div>
+  <!-- end modal three -->
+
   <!-- FCC - Responsive Web Design -->
   <div id="modalFour" class="modal">
     <div class="modal-content">
@@ -163,22 +301,37 @@
       <div class="modal-links">
         <ul>
           <li>
-            <a href="https://github.com/cliffmccall1/Responsive-Web-Design-Certification" target="blank">Project GitHub
-              Repository</a>
+            <a
+              href="https://github.com/cliffmccall1/Responsive-Web-Design-Certification"
+              target="blank"
+              >Project GitHub Repository</a
+            >
           </li>
           <li>
-            <a href="https://www.freecodecamp.org/certification/cliffmccall1/responsive-web-design" target="blank">Verify
-              Certificate</a>
+            <a
+              href="https://www.freecodecamp.org/certification/cliffmccall1/responsive-web-design"
+              target="blank"
+              >Verify Certificate</a
+            >
           </li>
           <li>
-            <a href="https://www.freecodecamp.org/" target="blank">Link to Course</a>
+            <a href="https://www.freecodecamp.org/" target="blank"
+              >Link to Course</a
+            >
           </li>
         </ul>
       </div>
-      <img class="modal-img" src="https://lh3.googleusercontent.com/UZr9jUGwmMUIgLvHU2LqhgkLdmfMhYJJqLhhA8t8ACBcmWVKLLGVJxEwb6LlhTWa3PMJP6J7Yq58T5eYHWxLl5NwCr1Gu7qWRZUfTNkQWsdm-zDW-aKHofZ6MgxA8BN1JQL1UMx8Zg=w2400"
-        alt="">
+      <!-- end modal links -->
+      <img
+        class="modal-img"
+        src="https://lh3.googleusercontent.com/UZr9jUGwmMUIgLvHU2LqhgkLdmfMhYJJqLhhA8t8ACBcmWVKLLGVJxEwb6LlhTWa3PMJP6J7Yq58T5eYHWxLl5NwCr1Gu7qWRZUfTNkQWsdm-zDW-aKHofZ6MgxA8BN1JQL1UMx8Zg=w2400"
+        alt=""
+      />
     </div>
+    <!-- end modal content -->
   </div>
+  <!-- end modal four -->
+
   <!-- Udemy - React 16 Guide -->
   <div id="modalFive" class="modal">
     <div class="modal-content">
@@ -187,37 +340,67 @@
       <div class="modal-links">
         <ul>
           <li>
-            <a href="https://github.com/cliffmccall1/build-a-burger-app" target="blank">Project GitHub Repository</a>
+            <a
+              href="https://github.com/cliffmccall1/build-a-burger-app"
+              target="blank"
+              >Project GitHub Repository</a
+            >
           </li>
           <li>
-            <a href="https://www.udemy.com/certificate/UC-VB0QXDO6/" target="blank">Verify Certificate</a>
+            <a
+              href="https://www.udemy.com/certificate/UC-VB0QXDO6/"
+              target="blank"
+              >Verify Certificate</a
+            >
           </li>
           <li>
-            <a href="https://www.udemy.com/share/1000uMBEAecFhXQno=/" target="blank">Link to Course</a>
+            <a
+              href="https://www.udemy.com/share/1000uMBEAecFhXQno=/"
+              target="blank"
+              >Link to Course</a
+            >
           </li>
         </ul>
       </div>
-      <img class="modal-img" src="https://lh3.googleusercontent.com/lfMSGLhnh3BSBNBs7J9ThQam7BdYoxZIz1PVb-T5gQrYjQfie8OC-enV6mhxgZj92iqe63x3XyU5aKUcXsuU2XzqBGg35NfjyBpDXelkzvZJVu0bkRN4VxuIXn1e8wv-gtYjmqG6Fg=w2400"
-        alt="">
+      <!-- end modal links -->
+      <img
+        class="modal-img"
+        src="https://lh3.googleusercontent.com/lfMSGLhnh3BSBNBs7J9ThQam7BdYoxZIz1PVb-T5gQrYjQfie8OC-enV6mhxgZj92iqe63x3XyU5aKUcXsuU2XzqBGg35NfjyBpDXelkzvZJVu0bkRN4VxuIXn1e8wv-gtYjmqG6Fg=w2400"
+        alt=""
+      />
     </div>
+    <!-- end modal content -->
   </div>
+  <!-- end modal five -->
+
   <!-- MODAL END -->
 
   <footer>
     <div class="footer-title">Follow me on social media</div>
     <div class="social-icons">
-      <a href="https://www.facebook.com/briggsmc" target="blank"><img src="img/facebook.png" alt="github" class="social-icon"></a>
-      <a href="https://twitter.com/codinLumberjack" target="blank"><img src="img/twitter.png" alt="twitter" class="social-icon"></a>
-      <a href="https://www.instagram.com/heylumberjack/" target="blank"><img src="img/instagram.png" alt="instagram"
-          class="social-icon"></a>
-      <a href="https://github.com/cliffmccall1" target="blank"><img src="img/github.png" alt="github" class="social-icon"></a>
+      <a href="https://www.facebook.com/briggsmc" target="blank"
+        ><img src="img/facebook.png" alt="github" class="social-icon"
+      /></a>
+      <a href="https://twitter.com/codinLumberjack" target="blank"
+        ><img src="img/twitter.png" alt="twitter" class="social-icon"
+      /></a>
+      <a href="https://www.instagram.com/heylumberjack/" target="blank"
+        ><img src="img/instagram.png" alt="instagram" class="social-icon"
+      /></a>
+
+      <a href="https://github.com/cliffmccall1" target="blank"
+        ><img src="img/github.png" alt="github" class="social-icon"
+      /></a>
     </div>
+    <!-- end social icons -->
     <p class="copyright">Copyright 2018 Cliff McCall</p>
   </footer>
+  <!-- end footer -->
 
-  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
+  <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"
+  ></script>
   <script src="main.js"></script>
 </body>
-
-</html>
