--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Cliff McCall - Full Stack Developer</title>
   <link rel="shortcut icon" href="img/cm.ico" />
   <!-- Link to stylesheet -->
-  <link href="stlye.css" rel="stylesheet" />
+  <link href="css/main.css" rel="stylesheet" />
   <meta charset="utf-8" />
   <!-- Google Fonts -->
   <link
@@ -55,16 +55,13 @@
   </section>
   <!-- end about-me -->
 
-  <section class="about-text" data-type="background" data-speed="2">
-    <div class="container">
+  <section class="skills" data-type="background" data-speed="2">
+    <div class="container images">
       <div class="row">
-        <div class="col-sm-8 col-sm-offset-2"><h1>Technical Skills</h1></div>
+        <div class="col-sm-8 col-sm-offset-2"><p>Technical Skills</p></div>
         <!-- end col -->
       </div>
       <!-- end row -->
-    </div>
-    <!-- end container -->
-    <div class="container images">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
           <img src="img/html.png" alt="HTML" />
@@ -83,6 +80,11 @@
         <!-- end col -->
       </div>
       <!-- end row -->
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <img src="img/c.png" alt="C#" /> <img src="img/net.png" alt=".NET" />
+        </div>
+      </div>
     </div>
     <!-- end container -->
   </section>
@@ -157,6 +159,9 @@
         ><br />
         <a class="button" data-modal="#modalFive"
           >React 16 (incl. React Router 4 & Redux)</a
+        ><br />
+        <a class="button" data-modal="#modalSix"
+          >Selenium WebDriver with C# for Beginners + Live Testing</a
         ><br />
       </div>
       <!-- end col -->
@@ -372,6 +377,47 @@
     <!-- end modal content -->
   </div>
   <!-- end modal five -->
+
+  <!-- Udemy - Selenium -->
+  <div id="modalSix" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>Selenium WebDriver with C# for Beginners + Live Testing</h2>
+      <div class="modal-links">
+        <ul>
+          <li>
+            <a
+              href="https://github.com/cliffmccall1/Selenium-WebDriver-Beginners"
+              target="blank"
+              >Project GitHub Repository</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.udemy.com/certificate/UC-B3UQXVLQ/"
+              target="blank"
+              >Verify Certificate</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.udemy.com/share/1000RGBEAecFhXQno=/"
+              target="blank"
+              >Link to Course</a
+            >
+          </li>
+        </ul>
+      </div>
+      <!-- end modal links -->
+      <img
+        class="modal-img"
+        src="https://lh3.googleusercontent.com/1iDIjlNCo3XWzJ3D4YWwdhkl0DDSKK0ZMCY4lftwPA0HIzkwUJh-O2t2hh3zu4Kon-YHjHRcANBX1Nf5oRWrGB_aUE-yE63q3ymRwPVedowYmdQqts25WEiHIK8NEFUwU2uhZ6q9FQ=w2400"
+        alt=""
+      />
+    </div>
+    <!-- end modal content -->
+  </div>
+  <!-- end modal six -->
 
   <!-- MODAL END -->
 
