correction to class name

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
   <!-- Udemy - Angular & NodeJS - The MEAN Stack -->
   <div id="modalTwo" class="modal">
-    <div class="modal-content">
+    <div class="modal-stuff">
       <a class="close">&times;</a>
       <h2>Angular & NodeJS - The MEAN Stack</h2>
       <div class="modal-links">
@@ -252,7 +252,7 @@
 
   <!-- FCC - JavaScript Algorithms and Data Structures -->
   <div id="modalThree" class="modal">
-    <div class="modal-content">
+    <div class="modal-stuff">
       <span class="close">&times;</span>
       <h2>JavaScript Algorithms and Data Structures</h2>
       <div class="modal-links">
@@ -285,7 +285,7 @@
 
   <!-- FCC - Responsive Web Design -->
   <div id="modalFour" class="modal">
-    <div class="modal-content">
+    <div class="modal-stuff">
       <span class="close">&times;</span>
       <h2>Responsive Web Design</h2>
       <div class="modal-links">
@@ -318,7 +318,7 @@
 
   <!-- Udemy - React 16 Guide -->
   <div id="modalFive" class="modal">
-    <div class="modal-content">
+    <div class="modal-stuff">
       <span class="close">&times;</span>
       <h2>React 16 (incl. React Router 4 & Redux)</h2>
       <div class="modal-links">
@@ -349,7 +349,7 @@
 
   <!-- Udemy - Selenium -->
   <div id="modalSix" class="modal">
-    <div class="modal-content">
+    <div class="modal-stuff">
       <span class="close">&times;</span>
       <h2>Selenium WebDriver with C# for Beginners + Live Testing</h2>
       <div class="modal-links">
