testing deployed version

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <section id="welcome" data-type="background" data-speed="5">
+  <section id="welcome">
     <div class="line"></div>
     <img
       class="welcome-img"
@@ -65,14 +65,14 @@
   </section>
   <!-- end about-me -->
 
-  <section id="skills" data-type="background" data-speed="2">
-    <div class="container-fluid images">
-      <div class="row">
+  <section id="skills">
+    <div class="container-fluid icons">
+      <div class="row align-items-center">
         <div class="col-sm-8 offset-sm-2"><p>Technical Skills</p></div>
         <!-- end col -->
       </div>
       <!-- end row -->
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-sm-6 offset-sm-3">
           <img src="img/html.png" alt="HTML" />
           <img src="img/css.png" alt="CSS" />
@@ -81,7 +81,7 @@
         <!-- end col -->
       </div>
       <!-- end row -->
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-sm-8 offset-sm-2">
           <img src="img/react.png" alt="React" />
           <img src="img/angular.png" alt="Angular" />
@@ -91,7 +91,7 @@
         <!-- end col -->
       </div>
       <!-- end row -->
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-sm-6 offset-sm-3">
           <img src="img/c.png" alt="C#" /> <img src="img/net.png" alt=".NET" />
           <img src="img/sql.png" alt="" />
