remove parrallax and clean old css

--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
 <body>
   <section id="welcome">
     <div class="line"></div>
-    <img
-      class="welcome-img"
-      src="img/image_from_ios.png"
-      alt="A picture of Cliff McCall"
-    />
+    <img class="welcome-img" src="img/image_from_ios.png" alt="CM logo" />
     <div class="line"></div>
   </section>
   <!-- End Welcome -->
